Fix nav float on mobile

--- a/assets/site.css
+++ b/assets/site.css
@@ -51,9 +51,6 @@ header ul.nav {
     font-size: 18px;
     line-height: 50px;
     text-transform: uppercase;
-    position: absolute;
-    right: 0;
-    top: 0;
     list-style-type: none;
 }
 header ul.nav li {
@@ -69,14 +66,19 @@ header ul.nav a {
     width: 80px;
     float: left;
 }
-
+header div {
+  display: inline-flex;
+}
+.navdiv {
+  float: right;
+}
 main {
     max-width: 740px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 80px;
     padding-left: 20px;
-    padding-right: 20px;    
+    padding-right: 20px;
 }
 
 p {
@@ -84,19 +86,19 @@ p {
     margin-top: 20px;
 }
 
-h1{
+h1 {
     text-align: center;
     font-family: Caveat, sans-serif;
     font-size: 30px;
 }
 
-h2{
+h2 {
     font-style: italic;
     font-size: 20px;
     margin-top: 40px;
 }
 
-article div.meta{
+article div.meta {
     text-align: center;
     font-style: italic;
     color: #aaa;
